TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2007-11-19 MickeM
 * Fixed a minor issue in reading registry keys
 + Added -noboot option to startup used for running command line utilities without booting the client
   "nsclient++ -noboot RemoteConfigruation ini2reg" for instance
 + Added fallback to try <module> and <module>.dll if the module was nhot loaded (when running command lines)
 * Migrated 2008 project files to new name and backported to 2005 project files.

2007-11-16 MickeM
 * Fixed an NRPE issue I added when I improved the sockets_timeout (now SSL works as well :).
 + Added sample VBS script and defenitions

2007-11-15 MickeM
 * Improved error message when external NRPE command failes.

2007-11-14 MickeM
 + Added multi-line output support ( issue #91 )
 * Improved error handling for external commands
 * Fixed an issue with NRPE/NSClient socket-reading (introduced by the socket_timeout)
 + Added an english fallback if "local" language PDH counters fail.

2007-11-12 MickeM
 + Added option to configure socket_timeouts (default is now 30 seconds) should (I hope) fix issue #85

2007-11-11 MickeM
 + Added option to configure the behavior of CheckService CheckAll (#64)

2007-11-08 MickeM
 + Added CheckWMIValue to check result-values from a WMI Query
 * Changed so performance values are "collapsed" i.e. 75362115584 = 70.0G (#89)
    If anyone don't want this let me know and I will make an option for it.

2007-11-06 MickeM
 + Added CLI interface to CheckWMI to check queries

2007-11-04 MickeM
 * Rewritten WMI handling as well as checks so things should be more useful now (cf. the wiki page for details)

2007-10-29 MickeM
 * Restructured build and include to work from CLI
 + Started to add makefiles to build from CLI
 + Added Finnish counters (#98)