@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,2,7,84
-#define PRODUCTVER     0,2,7,182
-#define STRFILEVER     "0.2.7.84"
-#define STRPRODUCTVER  "0.2.7.182"
-#define STRPRODUCTDATE  "2007-11-18"
+#define FILEVER        0,2,7,88
+#define PRODUCTVER     0,2,7,186
+#define STRFILEVER     "0.2.7.88"
+#define STRPRODUCTVER  "0.2.7.186"
+#define STRPRODUCTDATE  "2007-11-20"
 #endif // AUTOBUILD_H
